Fix invisible paragraphs at top of new columns
Code was old Firefox fix that doesn't seem to do anything anymore anyway.

--- a/client/homebrew/phbStyle/phb.style.less
+++ b/client/homebrew/phbStyle/phb.style.less
@@ -339,7 +339,6 @@ body {
 		-webkit-column-break-inside : avoid;
 		page-break-inside           : avoid;
 		break-inside                : avoid;
-		overflow: hidden; /* Firefox fix */
 	}
 	//Better spacing for spell blocks
 	h4+p+hr+ul{
